# ascpp

./: .clang-format  .clang-tidy  .clangd  .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt  examples.cpp  projects.hpp.in
include/: CMakeLists.txt  ascpp.hpp
include/app/: app.cpp  info.hpp
include/async/: app.hpp  worker.hpp
include/storage/: config.cpp  config.hpp
include/utils/: cmdline.hpp  directories.hpp  error.hpp  log.hpp  misc.hpp  result.hpp  system.hpp  utf.hpp
test/: 3rd.cpp  CMakeLists.txt  app.hpp  cmdline_test.cpp  config.cpp  config_test.cpp  directories_test.cpp  error_test.cpp  log_test.cpp  misc_test.cpp  result_test.cpp  system_test.cpp  utf_test.cpp
